--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,24 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+    <description></description>
+    <display-name>AddCliente</display-name>
+    <servlet-name>AddCliente</servlet-name>
+    <servlet-class>servlets.AddCliente</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddCliente</servlet-name>
+    <url-pattern>/AddCliente</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>EliminarCliente</display-name>
+    <servlet-name>EliminarCliente</servlet-name>
+    <servlet-class>servlets.EliminarCliente</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EliminarCliente</servlet-name>
+    <url-pattern>/EliminarCliente</url-pattern>
+  </servlet-mapping>
 </web-app>
