--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,4 +21,74 @@
     <servlet-name>EliminarCliente</servlet-name>
     <url-pattern>/EliminarCliente</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ActCliente</display-name>
+    <servlet-name>ActCliente</servlet-name>
+    <servlet-class>servlets.ActCliente</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ActCliente</servlet-name>
+    <url-pattern>/ActCliente</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddTecnico</display-name>
+    <servlet-name>AddTecnico</servlet-name>
+    <servlet-class>servlets.AddTecnico</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddTecnico</servlet-name>
+    <url-pattern>/AddTecnico</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>EliminarTecnico</display-name>
+    <servlet-name>EliminarTecnico</servlet-name>
+    <servlet-class>servlets.EliminarTecnico</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EliminarTecnico</servlet-name>
+    <url-pattern>/EliminarTecnico</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ActTecnico</display-name>
+    <servlet-name>ActTecnico</servlet-name>
+    <servlet-class>servlets.ActTecnico</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ActTecnico</servlet-name>
+    <url-pattern>/ActTecnico</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>EliminarIncidente</display-name>
+    <servlet-name>EliminarIncidente</servlet-name>
+    <servlet-class>servlets.EliminarIncidente</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EliminarIncidente</servlet-name>
+    <url-pattern>/EliminarIncidente</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddIncidente</display-name>
+    <servlet-name>AddIncidente</servlet-name>
+    <servlet-class>servlets.AddIncidente</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddIncidente</servlet-name>
+    <url-pattern>/AddIncidente</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ActIncidente</display-name>
+    <servlet-name>ActIncidente</servlet-name>
+    <servlet-class>servlets.ActIncidente</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ActIncidente</servlet-name>
+    <url-pattern>/ActIncidente</url-pattern>
+  </servlet-mapping>
 </web-app>
